# api-server

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  data.db  data.db-shm  data.db-wal  database.md  output.txt  test.json  test.rs
.github/workflows/: Linux.yml  Release.yml  release.yml
migrations/: 20240204021532_create_users.down.sql  20240204021532_create_users.up.sql  20240204094952_create_teachers.down.sql  20240204094952_create_teachers.up.sql  20240204141442_create_reasons.down.sql  20240204141442_create_reasons.up.sql  20240207073958_create_advise.down.sql  20240207073958_create_advise.up.sql  20240216130511_create_messages.down.sql  20240216130511_create_messages.up.sql  20240220074518_create_matchs.down.sql  20240220074518_create_matchs.up.sql  20240220083406_create_turn_info.down.sql  20240220083406_create_turn_info.up.sql
src/: api.rs  db.rs  main.rs
src/api/: chouxiang.rs  info.rs  jwt.rs  message.rs  user.rs  utils.rs
srcipt/: generate.py
